# PAG-mss00048

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ColorPicker.cpp  ColorPicker.h  Consola.cpp  Consola.h  Gui.cpp  Gui.h  ProgramShader.cpp  ProgramShader.h  README.md  Renderer.cpp  Renderer.h  TextBox.cpp  main.cpp
Interfaz/: ColorPicker.cpp  ColorPicker.h  Consola.cpp  Consola.h  Gui.cpp  Gui.h  Movimiento.h  SelectorLuces.cpp  SelectorLuces.h  SelectorModelo.cpp  SelectorModelo.h  SelectorMovimiento.cpp  SelectorMovimiento.h  TextBox.cpp  TextBox.h  TransformadorModelo.cpp  TransformadorModelo.h  VentanaArchivos.cpp  VentanaArchivos.h
Modelado/: Modelo.cpp  Modelo.h  Visualizacion.h
Renderizado/: Luz.cpp  Luz.h  ProgramShader.cpp  ProgramShader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
shaders/: pag03-fs.glsl  pag03-vs.glsl  pag04-fs.glsl  pag04-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl
